# pytest-config-shared

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/teo_pytest_config_shared/: __init__.py  pytest.ini
tests/fixtures/consumer/: test_sample.py
